...
    <!-- Chat -->
    <string name="chat_panel_title">Chat</string>
    <string name="chat_panel_input_text_placeholder">Send a message</string>
    <string name="chat_panel_jump_to_bottom">Jump to bottom</string>

    <!-- Recordings -->
    <string name="recording_stop_recording">Stop Recording</string>
    <string name="recording_start_recording">Start Recording</string>
    <string name="recording_confirm_dialog_message">Start recording this meeting?</string>
    <string name="recording_stop_confirm_dialog_message">Stop recording this meeting?</string>
    <string name="recording_confirm_button">Start Recording</string>
    <string name="recording_stop_confirm_button">Stop Recording</string>
    <string name="recording_started_notification">Recording started</string>
    <string name="recording_indicator_content_description">Recording in progress</string>
...
